--- a/sytle.css
+++ b/sytle.css
@@ -42,8 +42,63 @@ body{
     
 }
 
+#output-text{
+    width: 250px;
+    height: 120px;
+    float: left;
+}
+
 #keyboard{
     height: 400px;
+}
+#microphone{
+    height: 30px;
+    width: 30px;
+    float: right;
+    background-image: url("mic.jpg");
+    background-size: 100% 100%;
+    border-radius: 50%;
+    margin: 20px;
+    margin-top: 45px;
+ 
+}
+.record{
+    animation: microphone-animation 1.5s infinite;
+}
+@keyframes microphone-animation{
+    0%{
+        transform: scale(0.9);
+    }
+    70%{
+        transform: scale(1);
+        box-shadow: 0 0 0 10px rgba(0, 148, 255, 0.4);
+    }
+}
+.tooltip{
+    width: 200px;
+    font-size: 9px;
+    position:absolute;
+    background-color: lightblue;
+    color: black;
+    padding: 10px;
+    top: 45px;
+    transform: translate(50px);
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    border-radius: 5px;
+    visibility: hidden;
+}
+.tooltip::before{
+	content: '';
+	position: absolute;
+	border-width: 5px;
+	border-style: solid;
+	border-color:transparent skyblue transparent transparent;
+	left: 0;
+    margin-left: -10px;
+}
+
+#output-microphone:hover .tooltip{
+    visibility: visible;
 }
 
 .operator, .number, .empty{
